# binprism

./: .gitignore  LICENSE.txt  README.md  README.rst  __init__.py  changelog.txt  install_binprism.py  license.txt.txt  pyproject.toml  setup.cfg  setup.py
binprism/: __init__.py  setup.py  version.py
binprism/core/: FourierSeries.py  MomentCalculator.py  PPD.py  Profile.py  __init__.py  io.py
binprism/core/tools/: __init__.py  counting.py  plotting.py
binprism/util/: fit.py
core/: FourierSeries.py  MomentCalculator.py  PPD.py  Profile.py  __init__.py
core/tools/: sim.py
doc/: FourierSeries.md  Profile.md  datastructure.md  examples.md  fit.md  installation.md  methodology.md
doc/FourierSeries/: FourierSeries.md  antiderivative.md  copy.md  diff.md  eval.md  exp.md  integrate.md  log.md  max.md  min.md  power.md  shift.md
doc/MomentCalculator/: MomentCalculator.md
doc/PPD/: PPD.md  cdf.md  disp.md  mean.md  pdf.md  quantile.md  sim.md  var.md
doc/Profile/: Profile.md  angle2time.md  count_events.md  eval.md  plot.md  shift.md  sim.md  time2angle.md  time2hhmm.md
doc/examples/: ElectronicsSales.md  Examples.md  PaintSales.md  TrafficCounts.md  TrafficCountsWithOptimization.ipynb  TrafficCountsWithOptimization.md
doc/examples/.ipynb_checkpoints/: TrafficCountsWithOptimization-checkpoint.ipynb
doc/examples/notebooks/: PaintSales.ipynb  TrafficCounts.ipynb  TrafficCountsWithOptimization.ipynb
doc/io/: BinPrismCSVExample.csv  BinPrismTXTExample.txt  load.md  load_csv.md  load_df.md  load_txt.md  save.md  save_csv.md  save_df.md  save_txt.md
(+2 files in other folders)
