[metadata]
name = binprism
version = 1.1.1
description = Package for fitting continuous profiles to binned data
author = Joseph James Flood
author_email = joejimflood@gmail.com
url = https://github.com/JoeJimFlood/BinPrism
keywords = data_analysis, simulation
long_description = file: README.md
license = GNU GPLv3
classifiers =
    Programming Language :: Python :: 3

[flake8]
exclude = 
    .git,
    __pycache__
    doc

[options]
zip_safe = False
include_package_data = True
package = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    scipy
    matplotlib